discussion/kv_engine/175753/175753_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-35297: Successful RangeScan changes state to Completed

Initial motivator for this change was to improve the INFO logging
of a RangeScan, capturing when one is created and when it finally
goes away, with the desire to log the state and duration.

An extra state is added "Completed" that allows the differentiation
of scans that were cancelled, enabling ~RangeScan to log the
correct state and the runtime of the scan.

Some clean-up of the state transitions included as a lot of
reviewing of the state code occurs, primarily removing the
needless switch from Continuing->Idle for a successful scan.
Now that jumps straight from Continuing->Completed.

Change-Id: I21629765f48e9ff7cd69697e095a1155c104ff51

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-06-06 13:31:18.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-06-06 15:08:59.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46614/ : FAILURE

Failure of GoogleTest "WarmupDiskTest.noDataFileCollectionCountsTest":

<pre>
[ RUN      ] WarmupDiskTest.noDataFileCollectionCountsTest
unknown file: error: C++ exception with description "remove: Incorrect function.: "C:\Jenkins\workspace\kv_engine-windows-master\build\kv_engine\ep_engine_ep_unit_tests.db/test.546701\0.couch.1"" thrown in the test body.
[  FAILED  ] WarmupDiskTest.noDataFileCollectionCountsTest (45 ms)
WarmupDiskTest.noDataFileCollectionCountsTest
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46614/ )

Timeout of a CTest test 379/426 Test #260: ep-engine_ep_unit_tests.RangeScanFullAndValueEviction/RangeScanTest .....................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46614/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17930/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan.cc:234:28: error: out-of-line definition of "hasPrivilege" does not match any declaration in "RangeScan" [clang-diagnostic-error]
cb::engine_errc RangeScan::hasPrivilege(
                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan.h:102:40: error: unknown type name "EventuallyPersistentEngine" [clang-diagnostic-error]
                                 const EventuallyPersistentEngine& engine);
                                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_owner.cc:222:37: error: out-of-line definition of "hasPrivilege" does not match any declaration in "VB::RangeScanOwner" [clang-diagnostic-error]
cb::engine_errc VB::RangeScanOwner::hasPrivilege(
                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_owner.h:164:19: error: unknown type name "EventuallyPersistentEngine" [clang-diagnostic-error]
            const EventuallyPersistentEngine& engine) const;
                  ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17930/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan.cc:234:28:
error: out-of-line definition of "hasPrivilege" does not match any declaration in "RangeScan" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17930/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39177/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/range_scans/range_scan.h:102:40:
error: unknown type name "EventuallyPersistentEngine"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39177/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28161/ : FAILURE

Compile error at [2022-06-06T14:21:18.001Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/daemon/buckets_test.cc:18:5:
error: static_assert failed due to requirement "sizeof(Bucket) == 6240" "Bucket size changed, the reset test must be updated with the new members"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28161/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7589/ : FAILURE

Compile error at [2022-06-06T13:57:30.963Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/daemon/buckets_test.cc:18:5:
error: static_assert failed due to requirement "sizeof(Bucket) == 6240" "Bucket size changed, the reset test must be updated with the new members"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7589/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18960/ : FAILURE

Failure of GoogleTest "TransportProtocols/RangeScanTest.CreateCancel/McbpSsl_XattrYes_JsonYes_SnappyYes":

<pre>
[ RUN      ] TransportProtocols/RangeScanTest.CreateCancel/McbpSsl_XattrYes_JsonYes_SnappyYes
[2022-06-06T14:57:13.318Z] unknown file: Failure
[2022-06-06T14:57:13.318Z] C++ exception with description "EOF: Connection reset by peer" thrown in the test body.
[2022-06-06T14:57:13.318Z] [  FAILED  ] TransportProtocols/RangeScanTest.CreateCancel/McbpSsl_XattrYes_JsonYes_SnappyYes, where GetParam() = (McbpSsl, XattrYes, 4-byte object <00-00 00-00>, 4-byte object <00-00 00-00>) (16 ms)
TransportProtocols/RangeScanTest.CreateCancel/McbpSsl_XattrYes_JsonYes_SnappyYes
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18960/ )

Timeout of a CTest test [2022-06-06T15:02:12.413Z]  24/446 Test #267: ep-engine_ep_unit_tests.RangeScanFullAndValueEviction/RangeScanTest .....................................} ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18960/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19768/ : FAILURE

Compile error at [2022-06-06T13:56:54.482Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/daemon/buckets_test.cc:18:34:
error: static assertion failed: Bucket size changed, the reset test must be updated with the new members
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19768/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20770/ : FAILURE

Compile error at [2022-06-06T13:58:48.643Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/daemon/buckets_test.cc:18:5:
error: static_assert failed due to requirement "sizeof(Bucket) == 6240" "Bucket size changed, the reset test must be updated with the new members"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20770/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20115/ : FAILURE

Compile error at [2022-06-06T14:14:22.193Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/daemon/buckets_test.cc:18:34:
error: static assertion failed: Bucket size changed, the reset test must be updated with the new members
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20115/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7691/ : FAILURE

Failure of GoogleTest "TransportProtocols/RangeScanTest.CreateCancel/McbpSsl_XattrYes_JsonYes_SnappyYes":

<pre>
[ RUN      ] TransportProtocols/RangeScanTest.CreateCancel/McbpSsl_XattrYes_JsonYes_SnappyYes
[2022-06-06T14:18:32.099Z] unknown file: Failure
[2022-06-06T14:18:32.099Z] C++ exception with description "EOF: Connection reset by peer" thrown in the test body.
[2022-06-06T14:18:32.099Z] [  FAILED  ] TransportProtocols/RangeScanTest.CreateCancel/McbpSsl_XattrYes_JsonYes_SnappyYes, where GetParam() = (McbpSsl, XattrYes, 4-byte object <00-00 00-00>, 4-byte object <00-00 00-00>) (3 ms)
TransportProtocols/RangeScanTest.CreateCancel/McbpSsl_XattrYes_JsonYes_SnappyYes
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7691/ )

Timeout of a CTest test [2022-06-06T14:18:01.662Z] 178/447 Test #267: ep-engine_ep_unit_tests.RangeScanFullAndValueEviction/RangeScanTest .....................................} ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7691/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16983/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
